adiciona jest plugin ao eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,6 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "jest"],
   "rules": {}
 }
