fix: changes site canonical url

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
   name: Matheus Santos
-  site: 'https://matheusg18.github.io'
+  site: 'https://matheusg18.dev'
   base: '/'
   trailingSlash: false
 
